# AppSystem

./: .gitignore  .gitmodules  CMakeLists.txt  READEME.md  README.md  build.sh  premake5.lua  release.sh  run.sh  runrelease.sh
App.Core/: CMakeLists.txt
App.Core/src/: AppImGuiCore.cpp  IOCContainer.cpp
App.Core/src/ServiceManager/: ServiceManager.cpp  ServiceManager.h
App.GuiFront/: CMakeLists.txt
App.GuiFront/include/: binding.cpp  binding.h  binding_input.h  cpp_parser.h  imconfig.h  imgui_internal.h  imrad.h  node.cpp  node.h  ui_about_dlg.cpp  ui_about_dlg.h  ui_binding.h  ui_class_wizard.cpp  ui_class_wizard.h  ui_combo_dlg.h  ui_message_box.h  ui_new_field.cpp  ui_new_field.h  ui_table_columns.cpp  utils.h
AppImGuiCore/: CMakeLists.txt
AppImGuiCore/src/: AppImGuiCore.cpp  IOCContainer.cpp
AppImGuiCore/src/ServiceManager/: ApplicationContext.cpp  MessageBroker.cpp  ServiceManager.cpp  ServiceManager.h  ServicePool.cpp
AppImGuiCore/src/Utils/: Event.h
AppImGuiShell/: CMakeLists.txt  Config.h.in  imgui.ini
AppImGuiShell/src/: AppImGuiShell.cpp  Application.cpp  Application.h  EntryPoint.h  Image.cpp  Image.h  Random.cpp  Random.h  Timer.h  main.cpp  main2.cpp
AppImGuiShell/src/ImGui/: ImGuiBuild.cpp
AppImGuiShell/src/Input/: Input.cpp  Input.h  KeyCodes.h
AppImGuiShell/src/ServiceManager/: ServiceManager.cpp  ServiceManager.h
AppImGuiShell/src/core/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Engine.hpp  FirstApp.cpp  FirstApp.hpp  FrameInfo.hpp  GameObject.cpp  GameObject.hpp  Instance.cpp  Instance.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Loggin.cpp  Loggin.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  QueueFamilies.cpp  QueueFamilies.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  main.cpp
AppImGuiShell/src/core/systems/: PointLightSystem.cpp  PointLightSystem.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp
MContracts/: CMakeLists.txt
MContracts/include/: MessageBroker.h
MContracts/src/: ApplicationContext.h  Base.h  IOCContainer.h  Layer.h  MContracts.cpp  Module.h  Service.h  ServicePool.h  ioc.h
MContracts/src/VisualService/: VisualService.h
MContracts/src/eventpp/: Bus.h  Event.h  Signal.h
MCore/: CMakeLists.txt
MCore/src/: Mcore.cpp
MCore2/: CMakeLists.txt
MCore2/src/: Mcore2.cpp
Modules/MNetWork/: CMakeLists.txt
Modules/MNetWork/include/: MNetwork.h
Modules/MNetWork/src/: CoreRuntime.hpp  MNetwork.cpp
Modules/RayTracing/: CMakeLists.txt
Modules/RayTracing/src/: RayTracing.cpp
Modules/TestVisualService/: CMakeLists.txt
Modules/TestVisualService/src/: TestVisualService.cpp
